@@ -109,23 +109,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">statement_line_tree</field>
         </record>
 
-        <record model="ir.action.act_window" id="act_statement_line_form">
-            <field name="name">Statement Lines</field>
-            <field name="res_model">account.statement.line</field>
-        </record>
-        <record model="ir.action.act_window.view" id="act_statement_line_form_view1">
-            <field name="sequence" eval="10"/>
-            <field name="view" ref="statement_line_view_tree"/>
-            <field name="act_window" ref="act_statement_line_form"/>
-        </record>
-        <record model="ir.action.act_window.view" id="act_statement_line_form_view2">
-            <field name="sequence" eval="20"/>
-            <field name="view" ref="statement_line_view_form"/>
-            <field name="act_window" ref="act_statement_line_form"/>
-        </record>
-        <menuitem parent="menu_statement_form" sequence="10"
-            action="act_statement_line_form" id="menu_statement_line_form"/>
-
         <record model="ir.ui.view" id="statement_line_view_tree_editable">
             <field name="model">account.statement.line</field>
             <field name="type">tree</field>
@@ -277,6 +260,75 @@ this repository contains the full copyright notices and license terms. -->
             <field name="group" ref="account.group_account_admin"/>
         </record>
 
+        <record model="ir.ui.view" id="line_group_view_form">
+            <field name="model">account.statement.line.group</field>
+            <field name="type">form</field>
+            <field name="name">line_group_form</field>
+        </record>
+        <record model="ir.ui.view" id="line_group_view_list">
+            <field name="model">account.statement.line.group</field>
+            <field name="type">tree</field>
+            <field name="name">line_group_list</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_line_group_form">
+            <field name="name">Statement Line Groups</field>
+            <field name="res_model">account.statement.line.group</field>
+        </record>
+        <record model="ir.action.act_window.view" id="act_line_group_form_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="line_group_view_list"/>
+            <field name="act_window" ref="act_line_group_form"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_line_group_form_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="line_group_view_form"/>
+            <field name="act_window" ref="act_line_group_form"/>
+        </record>
+        <menuitem parent="menu_statement_form" sequence="10"
+            action="act_line_group_form" id="menu_line_group_form"/>
+
+        <record model="ir.rule.group" id="rule_group_line_group">
+            <field name="model" search="[('model', '=', 'account.statement.line.group')]"/>
+            <field name="global_p" eval="True"/>
+        </record>
+        <record model="ir.rule" id="rule_line_group1">
+            <field name="domain">[('statement.company', '=', user.company.id if user.company else None)]</field>
+            <field name="rule_group" ref="rule_group_line_group"/>
+        </record>
+
+        <record model="ir.model.access" id="access_line_group">
+            <field name="model" search="[('model', '=', 'account.statement.line.group')]"/>
+            <field name="perm_read" eval="False"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_line_group_account_admin">
+            <field name="model" search="[('model', '=', 'account.statement.line.group')]"/>
+            <field name="group" ref="account.group_account_admin"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+        <record model="ir.model.access" id="access_line_group_account">
+            <field name="model" search="[('model', '=', 'account.statement.line.group')]"/>
+            <field name="group" ref="account.group_account"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+        <record model="ir.model.access" id="access_line_group_statement">
+            <field name="model" search="[('model', '=', 'account.statement.line.group')]"/>
+            <field name="group" ref="group_statement"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+
         <record model="ir.action.act_window" id="act_move_lines_form">
             <field name="name">Move Lines</field>
             <field name="res_model">account.move.line</field>
@@ -321,5 +373,15 @@ this repository contains the full copyright notices and license terms. -->
             <field name="action" ref="act_moves_form2"/>
         </record>
 
+        <record model="ir.action.act_window" id="act_line_groups_form">
+            <field name="name">Line Groups</field>
+            <field name="res_model">account.statement.line.group</field>
+            <field name="domain">[('journal', 'in', Eval('active_ids'))]</field>
+        </record>
+        <record model="ir.action.keyword" id="act_line_groups_form_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">account.statement.journal,-1</field>
+            <field name="action" ref="act_line_groups_form"/>
+        </record>
     </data>
 </tryton>
