@@ -1,0 +1,21 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form string="Statement Line Group">
+    <label name="statement"/>
+    <field name="statement"/>
+    <label name="journal"/>
+    <field name="journal"/>
+    <label name="number"/>
+    <field name="number"/>
+    <label name="date"/>
+    <field name="date"/>
+    <label name="amount"/>
+    <field name="amount"/>
+    <label name="currency"/>
+    <field name="currency"/>
+    <label name="party"/>
+    <field name="party"/>
+    <label name="move"/>
+    <field name="move"/>
+</form>
