@@ -1,3 +1,4 @@
+* Add line group model
 * Create Move by grouped lines (number, date, party)
 
 Version 3.4.0 - 2014-10-20
